--- a/DominoGame.Wpf/DominoGame.Wpf.csproj
+++ b/DominoGame.Wpf/DominoGame.Wpf.csproj
@@ -16,6 +16,9 @@
     <Content Include="Assets\Sounds\Music.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Sounds\Win.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 
